--- a/ClientService/src/app/views/user/login/login.component.html
+++ b/ClientService/src/app/views/user/login/login.component.html
@@ -1,20 +1,24 @@
-<div class="card">
+<div class="card ">
     <div class=" position-relative card-body ">
         <h6 class="mb-4">Check-in / Check-Out Form </h6>
 
         <form #loginForm="ngForm" novalidate (ngSubmit)="onSubmit()">
-            <label class="form-group has-float-label">
+            <div class="form-group">
+                <label class="has-float-label">
         <input class="form-control" type="number" required  ngModel #employeeID="ngModel" name="employeeID"  />
         <span>Employee ID</span>
         <div *ngIf="!employeeID.valid && loginForm.submitted" class="invalid-tooltip">Employee ID is required!</div>
       </label>
-            <label class="form-group has-float-label">
+            </div>
+            <div class="form-group">
+                <label class=" has-float-label">
         <input class="form-control" type="date" placeholder="" required ngModel #date="ngModel" name="date" />
         <span>Date</span>
         <div *ngIf="!date.valid && loginForm.submitted" class="invalid-tooltip">Date is required!</div>
       </label>
+            </div>
             <label class="form-group has-float-label">
-        <input class="form-control" type="time" placeholder="" required ngModel #time="ngModel" name="time" />
+        <input class="form-control" type="time" placeholder="" required ngModel #time="ngModel" name="time"  />
         <span>Time</span>
         <div *ngIf="!time.valid && loginForm.submitted" class="invalid-tooltip">Time is required!</div>
       </label>
@@ -27,15 +31,18 @@
                     <input type="radio" id="checkOut" value="checkOut" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
                     <label class="custom-control-label" for="checkOut">Check Out</label>
                 </div>
+                <div *ngIf="!radio.valid && loginForm.submitted" class="invalid-tooltip">Radio is required!</div>
             </div>
 
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex">
                 <!-- <a routerLink="/user/forgot-password">{{ 'user.forgot-password' | translate }}?</a> -->
                 <!-- <app-state-button [btnClass]="'btn btn-primary btn-lg btn-shadow'" [currentState]="buttonState" [isDisabled]="buttonDisabled" click="onLoginClick()">
                     {{ 'user.login-button' | translate | uppercase }}
                 </app-state-button> -->
-                <button class="btn btn-primary" type="submit">Send</button>
+                <!-- <label class="p-5">ff</label> -->
+
             </div>
+            <button class="btn btn-primary btn btn-success mb-2" type="submit">Send</button>
         </form>
 
     </div>
