ui and backend link

--- a/ClientService/src/app/views/user/login/login.component.html
+++ b/ClientService/src/app/views/user/login/login.component.html
@@ -20,11 +20,11 @@
       </label>
             <div class="mb-4 form-row p-4">
                 <div class="form-group col-md-6 custom-control custom-radio">
-                    <input type="radio" id="checkIn" value="checkIn" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
+                    <input type="radio" id="checkIn" value="P10" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
                     <label class="custom-control-label" for="checkIn">Check in</label>
                 </div>
                 <div class="form-group col-md-6 custom-control custom-radio">
-                    <input type="radio" id="checkOut" value="checkOut" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
+                    <input type="radio" id="checkOut" value="P20" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
                     <label class="custom-control-label" for="checkOut">Check Out</label>
                 </div>
             </div>
