--- a/ClientService/src/app/views/user/login/login.component.html
+++ b/ClientService/src/app/views/user/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="card ">
-    <div class=" position-relative card-body ">
+<div class="card auth-card">
+    <div class=" position-relative card-body  form-side">
         <h6 class="mb-4">Check-in / Check-Out Form </h6>
 
         <form #loginForm="ngForm" novalidate (ngSubmit)="onSubmit()">
