--- a/ClientService/src/app/views/user/login/login.component.html
+++ b/ClientService/src/app/views/user/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="card ">
+<div class="card " style="width: 800px;height: 600px;">
     <div class=" position-relative card-body ">
         <h6 class="mb-4">Check-in / Check-Out Form </h6>
 
