--- a/ClientService/src/app/views/user/login/login.component.html
+++ b/ClientService/src/app/views/user/login/login.component.html
@@ -24,7 +24,15 @@
         <div *ngIf="!time.valid && loginForm.submitted" class="invalid-tooltip">Time is required!</div>
       </label>
             </div>
-            <div class="mb-4 form-row p-4 tooltip-center-bottom">
+            <div class="form-group error-l-75">
+                <label>Terminal ID</label>
+                <ng-select appearance="outline" #terminalID="ngModel" name="terminalID" labelForId="terminalID" [searchable]="false" required ngModel>
+                    <ng-option value="t1">T1</ng-option>
+                    <ng-option value="t2">T2</ng-option>
+                </ng-select>
+                <div *ngIf="!terminalID.valid && loginForm.submitted" class="invalid-tooltip">Terminal ID is required!</div>
+            </div>
+            <div class="mb-4 form-row p-4 error-l-75 tooltip-center-bottom">
                 <div class="form-group col-md-6 custom-control custom-radio">
                     <input type="radio" id="checkIn" value="P10" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
                     <label class="custom-control-label" for="checkIn">Check in</label>
@@ -33,20 +41,22 @@
                     <input type="radio" id="checkOut" value="P20" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
                     <label class="custom-control-label" for="checkOut">Check Out</label>
                 </div>
-                <div *ngIf="!radio.valid && loginForm.submitted">Radio is required!</div>
+                <div *ngIf="!radio.valid && loginForm.submitted" class="invalid-tooltip">Radio is required!</div>
             </div>
 
-            <div class="d-flex">
-                <!-- <a routerLink="/user/forgot-password">{{ 'user.forgot-password' | translate }}?</a> -->
-                <!-- <app-state-button [btnClass]="'btn btn-primary btn-lg btn-shadow'" [currentState]="buttonState" [isDisabled]="buttonDisabled" click="onLoginClick()">
-                    {{ 'user.login-button' | translate | uppercase }}
-                </app-state-button> -->
-                <!-- <label class="p-5">ff</label> -->
-
-            </div>
-            <button class="btn btn-primary btn btn-success mb-2" type="submit" style="background-color: navy;">Send</button>
+            <button class="btn btn-primary btn btn-success mb-2" type="submit" style="background-color: #121b43;">Send</button>
         </form>
 
     </div>
 </div>
 <simple-notifications></simple-notifications>
+
+<!-- <div class="d-flex">
+
+
+            </div> -->
+<!-- <a routerLink="/user/forgot-password">{{ 'user.forgot-password' | translate }}?</a> -->
+<!-- <app-state-button [btnClass]="'btn btn-primary btn-lg btn-shadow'" [currentState]="buttonState" [isDisabled]="buttonDisabled" click="onLoginClick()">
+                    {{ 'user.login-button' | translate | uppercase }}
+                </app-state-button> -->
+<!-- <label class="p-5">ff</label> -->
