--- a/ClientService/src/app/views/user/login/login.component.html
+++ b/ClientService/src/app/views/user/login/login.component.html
@@ -1,63 +1,84 @@
-<div class="card auth-card" style="width: 600px;height: 600px;">
-    <div class=" position-relative card-body  form-side">
-        <h6 class="mb-4">Clock In Simulator </h6>
+<div class="card" style="width: 600px;height: 600px;">
 
-        <form #loginForm="ngForm" novalidate (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label class="has-float-label">
-        <input class="form-control" type="number" required  ngModel #employeeID="ngModel" name="employeeID"  />
-        <span>Employee ID</span>
-        <div *ngIf="!employeeID.valid && loginForm.submitted" class="invalid-tooltip">Employee ID is required!</div>
-      </label>
-            </div>
-            <div class="form-group">
-                <label class=" has-float-label">
-        <input class="form-control" type="date" placeholder="" required ngModel #date="ngModel" name="date" />
-        <span>Date</span>
-        <div *ngIf="!date.valid && loginForm.submitted" class="invalid-tooltip">Date is required!</div>
-      </label>
-            </div>
-            <div class="form-group">
-                <label class="form-group has-float-label">
-        <input class="form-control" type="time" placeholder="" required ngModel #time="ngModel" name="time"  />
-        <span>Time</span>
-        <div *ngIf="!time.valid && loginForm.submitted" class="invalid-tooltip">Time is required!</div>
-      </label>
-            </div>
-            <div class="form-group error-l-75">
-                <label>Terminal ID</label>
-                <ng-select appearance="outline" #terminalID="ngModel" name="terminalID" labelForId="terminalID" [searchable]="false" required ngModel>
-                    <ng-option value="warehouse">Warehouse</ng-option>
-                    <ng-option value="productionPlanet">Production Planet</ng-option>
-                    <ng-option value="headOffice">Head Office</ng-option>
-                </ng-select>
-                <div *ngIf="!terminalID.valid && loginForm.submitted" class="invalid-tooltip">Terminal ID is required!</div>
-            </div>
-            <div class="mb-4 form-row p-4 error-l-75 tooltip-center-bottom">
-                <div class="form-group col-md-6 custom-control custom-radio">
-                    <input type="radio" id="checkIn" value="P10" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
-                    <label class="custom-control-label" for="checkIn">Check in</label>
-                </div>
-                <div class="form-group col-md-6 custom-control custom-radio">
-                    <input type="radio" id="checkOut" value="P20" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
-                    <label class="custom-control-label" for="checkOut">Check Out</label>
-                </div>
-                <div *ngIf="!radio.valid && loginForm.submitted" class="invalid-tooltip">Radio is required!</div>
-            </div>
+    <tabset class="card-tabs" [justified]="true">
+        <tab heading="Terminal" class="card-body">
+            <div class=" position-relative card-body  form-side">
+                <h6 class="mb-4">Clock In Simulator </h6>
 
-            <button class="btn btn-primary btn btn-success mb-2" type="submit" style="background-color: #121b43;">Send</button>
-        </form>
+                <form #loginForm="ngForm" novalidate (ngSubmit)="onSubmit()">
+                    <div class="form-group">
+                        <label class="has-float-label">
+            <input class="form-control" type="number" required  ngModel #employeeID="ngModel" name="employeeID"  />
+            <span>Employee ID</span>
+            <div *ngIf="!employeeID.valid && loginForm.submitted" class="invalid-tooltip">Employee ID is required!</div>
+          </label>
+                    </div>
+                    <div class="form-group">
+                        <label class=" has-float-label">
+            <input class="form-control" type="date" placeholder="" required ngModel #date="ngModel" name="date" />
+            <span>Date</span>
+            <div *ngIf="!date.valid && loginForm.submitted" class="invalid-tooltip">Date is required!</div>
+          </label>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-group has-float-label">
+            <input class="form-control" type="time" placeholder="" required ngModel #time="ngModel" name="time"  />
+            <span>Time</span>
+            <div *ngIf="!time.valid && loginForm.submitted" class="invalid-tooltip">Time is required!</div>
+          </label>
+                    </div>
+                    <div class="form-group error-l-75">
+                        <label>Terminal ID</label>
+                        <ng-select appearance="outline" #terminalID="ngModel" name="terminalID" labelForId="terminalID" [searchable]="false" required ngModel>
+                            <ng-option value="warehouse">Warehouse</ng-option>
+                            <ng-option value="productionPlanet">Production Planet</ng-option>
+                            <ng-option value="headOffice">Head Office</ng-option>
+                        </ng-select>
+                        <div *ngIf="!terminalID.valid && loginForm.submitted" class="invalid-tooltip">Terminal ID is required!</div>
+                    </div>
+                    <div class="mb-4 form-row p-4 error-l-75 tooltip-center-bottom">
+                        <div class="form-group col-md-6 custom-control custom-radio">
+                            <input type="radio" id="checkIn" value="P10" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
+                            <label class="custom-control-label" for="checkIn">Check in</label>
+                        </div>
+                        <div class="form-group col-md-6 custom-control custom-radio">
+                            <input type="radio" id="checkOut" value="P20" name="radio" ngModel #radio="ngModel" required class="custom-control-input">
+                            <label class="custom-control-label" for="checkOut">Check Out</label>
+                        </div>
+                        <div *ngIf="!radio.valid && loginForm.submitted">Radio is required!</div>
+                    </div>
+                    <button class="btn btn-primary btn btn-success mb-2" type="button" style="background-color: #121b43;" (click)="push()">Push</button>{{" "}}
+                    <button class="btn btn-primary btn btn-success mb-2" type="submit" style="background-color: #121b43;" (click)="onSubmit()">Send</button>
 
-    </div>
+                </form>
+            </div>
+        </tab>
+        <tab heading="Sheet" class="card-body">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">Employee ID</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Time</th>
+                        <th scope="col">Terminal ID</th>
+                        <th scope="col">CheckIn/CheckOut</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let item of list">
+                        <th scope="row">{{item.employeeID}}</th>
+                        <td>{{item.date}}</td>
+                        <td>{{item.time}}</td>
+                        <td>{{item.terminalID}}</td>
+                        <td>{{item.status}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <button class="btn btn-primary btn btn-success mb-2" type="button" style="background-color: #121b43;" (click)="sendList()">Send</button>
+        </tab>
+    </tabset>
+
+
 </div>
 <simple-notifications></simple-notifications>
-
-<!-- <div class="d-flex">
-
-
-            </div> -->
-<!-- <a routerLink="/user/forgot-password">{{ 'user.forgot-password' | translate }}?</a> -->
-<!-- <app-state-button [btnClass]="'btn btn-primary btn-lg btn-shadow'" [currentState]="buttonState" [isDisabled]="buttonDisabled" click="onLoginClick()">
-                    {{ 'user.login-button' | translate | uppercase }}
-                </app-state-button> -->
-<!-- <label class="p-5">ff</label> -->
