--- a/ClientService/src/app/views/user/login/login.component.html
+++ b/ClientService/src/app/views/user/login/login.component.html
@@ -48,7 +48,7 @@
                         <div *ngIf="!radio.valid && loginForm.submitted">Radio is required!</div>
                     </div>
                     <button class="btn btn-primary btn btn-success mb-2" type="button" style="background-color: #121b43;" (click)="push()">Push</button>{{" "}}
-                    <button class="btn btn-primary btn btn-success mb-2" type="submit" style="background-color: #121b43;" (click)="send()">Send</button>
+                    <button class="btn btn-primary btn btn-success mb-2" type="submit" style="background-color: #121b43;">Send</button>
 
                 </form>
             </div>
